feat: add some scripts to unzip and preload toplingdb from the jar package